--- a/kubernetes/users-deployment.yaml
+++ b/kubernetes/users-deployment.yaml
@@ -14,4 +14,9 @@ spec:
     spec:
       containers:
         - name: users
-          image: svadrut/third_kubernetes_app-users
+          image: svadrut/third_kubernetes_app-users:latest
+          env:
+            - name: AUTH_ADDRESS
+              value: localhost
+        - name: auth
+          image: svadrut/third_kubernetes_app-auth:latest
